--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,9 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+            {{ dump(posts[0].translations) }}
+        {% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
 </html>
