--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,10 @@
     </head>
     <body>
         {% block body %}
-            {{ dump(posts[0].translations) }}
+            {% for post in posts %}
+                {{ dump(post) }}
+                {{ post.title }}
+            {% endfor  %}
         {% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
