--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,7 @@
             {% for post in posts %}
                 {{ dump(post) }}
                 {{ post.title }}
+                <img src="{{ vich_uploader_asset(post, 'imageFile') }}" />
             {% endfor  %}
         {% endblock %}
         {% block javascripts %}{% endblock %}
